--- a/src/app/navigation/topnav/topnav-dropdown/topnav-dropdown.component.scss
+++ b/src/app/navigation/topnav/topnav-dropdown/topnav-dropdown.component.scss
@@ -68,7 +68,9 @@
     div {
       padding: 10px 14px;
       font-size: 12px;
-      font-weight: 500;
+      font-weight: 400;
+      height: 12px;
+      line-height: 12px;
       cursor: pointer;
 
       &:hover {
