--- a/src/app/navigation/topnav/topnav.component.scss
+++ b/src/app/navigation/topnav/topnav.component.scss
@@ -182,3 +182,15 @@ $main-color: #9B9A9B;
 .support-dropdown {
   margin: 0 16px 0 8px;
 }
+
+profile-dropdown {
+  z-index: 1;
+}
+
+simple-dropdown {
+  z-index: 1;
+}
+
+topnav-dropdown {
+  z-index: 1;
+}
