--- a/src/app/shared/components/simple-dropdown/simple-dropdown.component.scss
+++ b/src/app/shared/components/simple-dropdown/simple-dropdown.component.scss
@@ -93,6 +93,9 @@
     &__item {
       padding: 15px;
       white-space: nowrap;
+      height: 14px;
+      line-height: 14px;
+      font-weight: 400;
 
       &:hover {
         background: #F7F7F7;
