--- a/src/app/pages/customers-page/customer-view/customer-add-new/customer-add-new.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-add-new/customer-add-new.component.html
@@ -8,9 +8,9 @@
 
   <div class="entity-view__card__content customer-add__content">
     <div class="flex-custom">
-      <mat-form-field class="entity-view__card__content__item" [class.error]="formInvalid && !customer.firstName">
+      <mat-input-container class="entity-view__card__content__item" [class.error]="formInvalid && !customer.firstName">
         <input auto-focus matInput name="firstName" [(ngModel)]="customer.firstName" placeholder="{{'FORMINPUTS_FIRSTNAME' | translate}}" required type="text">
-      </mat-form-field>
+      </mat-input-container>
 
       <mat-input-container class="entity-view__card__content__item" [class.error]="formInvalid && !customer.lastName">
         <input matInput name="lastName" [(ngModel)]="customer.lastName" placeholder="{{'FORMINPUTS_LASTNAME' | translate}}" required type="text">
