--- a/src/assets/scss/_navigation.scss
+++ b/src/assets/scss/_navigation.scss
@@ -1,7 +1,7 @@
 @import "mixins";
 
-$sidenav-width: 215px;
-$sidenav-width-overflow: 215px;
+$sidenav-width: 256px;
+$sidenav-width-collapsed: 80px;
 $topnav-height: 70px;
 $sidebar-color-light: #385F8D;
 $sidebar-color-middle: #2C486F;
@@ -13,10 +13,13 @@ $sidebar-text-color-hover: #5383C3;
 
 $navigation-color: #5383C3;
 
-mat-sidenav {
-  max-width: $sidenav-width-overflow;
+.mat-sidenav {
+  max-width: $sidenav-width;
   min-width: 0 !important;
   z-index: 6 !important;
+  overflow-x: hidden;
+  box-shadow: 0 8px 10px -5px rgba(0,0,0,.2), 0 16px 24px 2px rgba(0,0,0,.14), 0 6px 30px 5px rgba(0,0,0,.12);
+  font-family: Roboto, sans-serif;
 
   @media #{$medium-and-down} {
     &.mat-sidenav-opened {
@@ -27,6 +30,7 @@ mat-sidenav {
   .mat-toolbar {
     padding: 0 72px 0 15px;
     height: $topnav-height;
+    width: $sidenav-width;
     background-color: white;
 
     .logo {
@@ -38,9 +42,14 @@ mat-sidenav {
     }
   }
 
-  .mat-list-item {
-    padding-left: 25px !important;
-    padding-right: 25px !important;
+  .toolbar--small {
+    width: $sidenav-width-collapsed;
+  }
+
+  .side-navigation {
+    display: flex;
+    flex-direction: column;
+    min-height: calc(100vh - 80px);
   }
 
   mat-icon {
@@ -67,71 +76,6 @@ mat-sidenav {
     }
   }
 
-  .toolbar--small {
-    padding-right: 0;
-  }
-}
-
-mat-sidenav-container > .md-sidenav-content {
-  background-color: #E6EAF2 !important;
-  height: 100vh;
-  transform: none !important;
-}
-
-mat-sidenav-container {
-  background-color: rgb(250, 250, 250);
-}
-
-.item-selected.mat-list-item {
-  padding-left: 0 !important;
-  background-color: darken($sidebar-color, 4%) !important;
-
-  mat-icon {
-    color: $sidebar-text-color-hover;
-  }
-
-  .sidenav-item__text {
-    color: #828282;
-    font-weight: 600;
-  }
-}
-
-mat-nav-list.side-navigation {
-  width: 100%;
-  padding-top: 0;
-
-  a[mat-list-item] {
-    position: relative;
-
-    .mat-list-item-content {
-      padding: 0;
-    }
-  }
-
-  a[mat-list-item] > .mat-list-item {
-    @include font-body();
-    color: $sidebar-text-color;
-    -webkit-font-smoothing: antialiased;
-    line-height: 20px;
-    letter-spacing: .14px;
-
-    > i.material-icons:last-child {
-      line-height: 40px;
-      transition: .4s transform cubic-bezier(.25, .8, .25, 1);
-      &:before {
-        content: "keyboard_arrow_down";
-      }
-    }
-  }
-
-  a.active > .mat-list-item > i.material-icons:last-child {
-    transform: rotate(180deg) translateZ(0);
-  }
-
-  a.active:not(.nav-dropdown) > .mat-list-item:not(:hover) {
-    background-color: darken($sidebar-color, 4%) !important;
-  }
-
   .nav-children {
     padding-top: 0;
     overflow: hidden;
@@ -142,107 +86,85 @@ mat-nav-list.side-navigation {
       height: 0 !important;
     }
 
-    .nav-dropdown {
-      .sidenav-item__text {
-        font-weight: 600;
-        color: #828282;
+    &.level1 {
+      .nav-dropdown {
+        font-weight: 500;
+      }
+
+      .mat-list-item {
+        height: 38px;
+        font-size: 14px;
+      }
+
+      .placeholder {
+        margin-right: 47px;
       }
     }
 
-    $base-padding: 16px;
-    $base-padding-left: 25px;
-    $base-color-change: 2%;
-
-    &.level1 a > .mat-list-item {
-      height: 38px;
-      padding-left: $base-padding-left + 30px !important;
-      padding-right: 5px !important;
-
-      .sidenav-item__text {
-        width: 100%;
-        font-size: 12px;
+    &.level2 {
+      .placeholder {
+        margin-right: 67px;
       }
     }
-    &.level1 .item-selected > .mat-list-item {
-      padding-left: 0 !important;
+  }
 
-      .selected-placeholder {
-        margin-right: 49px;
-      }
-    }
-    &.level2 a > .mat-list-item {
-      padding-left: $base-padding-left + 45px !important;
-      height: 38px;
+  .mat-list-item-content {
+    padding-left: 0 !important;
+    color: rgba(0,0,0,0.7);
+  }
 
-      .sidenav-item__text {
-        width: 140px;
-        font-size: 12px;
-      }
+  .placeholder {
+    width: 8px;
+    margin-right: 17px;
+    height: 100%;
+    background: white;
+  }
+
+  .item-selected {
+    background: rgba(0, 0, 0, 0.04);
+
+    mat-icon {
+      color: #5383C3;
     }
-    &.level2 a > .mat-list-item {
-      .selected-placeholder {
-        margin-right: 62px !important;
-      }
+
+    .placeholder {
+      background: #5383C3;
     }
-    &.level3 a > .mat-list-item {
-      height: 38px;
-      padding-left: $base-padding * 4;
-    }
-    &.level4 a > .mat-list-item {
-      height: 38px;
-      padding-left: $base-padding * 5;
-    }
-    &.level5 a > .mat-list-item {
-      height: 38px;
-      padding-left: $base-padding * 6;
-    }
+  }
+
+  .toolbar--small {
+    padding-right: 0;
   }
 }
 
-.side-navigation {
-  display: table;
-  height: calc(100% - 70px);
-  font-family: Montserrat, sans-serif;
+mat-sidenav-container > .mat-sidenav-content {
+  background-color: #E6EAF2 !important;
+  height: 100vh;
+  transform: none !important;
+}
 
-  &__version {
-    display: table-row;
-    height: 30px;
+mat-sidenav-container {
+  background-color: rgb(250, 250, 250);
+}
 
-    img {
-      height: 15px;
-      margin-right: 5px;
-      margin-left: 25px;
-      vertical-align: middle;
-    }
+.version {
+  margin-top: auto;
+  height: 30px;
 
-    span {
-      vertical-align: middle;
-      color: $sidebar-text-color;
-      font-size: 11px;
-    }
+  img {
+    height: 15px;
+    margin-right: 5px;
+    margin-left: 25px;
+    vertical-align: middle;
+  }
+
+  span {
+    vertical-align: middle;
+    color: $sidebar-text-color;
+    font-size: 11px;
   }
 }
 
-.side-navigation mat-nav-list {
-  position: relative;
-}
-
-.side-navigation mat-nav-list.nav-children:before, .side-navigation mat-nav-list.nav-children:after, .side-navigation a.active:not(.nav-dropdown):before, .side-navigation a.active:not(.nav-dropdown):after {
-  content: "";
-  left: 0;
-  position: absolute;
-  width: $sidenav-width;
-  height: 2px;
-  z-index: 10;
-}
-
-.side-navigation mat-nav-list.nav-children:before, .side-navigation a.active:before {
-  top: 0;
-}
-
-.side-navigation mat-nav-list.nav-children:after, .side-navigation a.active:after {
-  bottom: 0;
-}
 
 @media #{$medium-and-down} {
   main, footer {
@@ -288,15 +210,6 @@ app-topnav {
   }
 }
 
-.sidenav-item {
-
-  &__text {
-    width: 90px;
-    font-size: 14px;
-    font-family: Montserrat, sans-serif;
-  }
-}
-
 .topnav {
   background-color: $navigation-color !important;
 }
@@ -304,6 +217,14 @@ app-topnav {
 .topnav-search-input {
   color: white;
   font-size: 16px;
+
+  .mat-input-wrapper {
+    padding-bottom: 0;
+  }
+
+  .mat-input-infix {
+    border-top: none;
+  }
 
   .mat-input-placeholder {
     color: white;
