--- a/src/app/pages/notifications-page/notifications-section/notifications-section.component.html
+++ b/src/app/pages/notifications-page/notifications-section/notifications-section.component.html
@@ -4,7 +4,7 @@
     <div class="header flex-custom flex-custom--center">
       <div class="mrw-bi-input">
         <mat-icon>search</mat-icon>
-        <mat-input-container [floatPlaceholder]="false">
+        <mat-input-container [floatLabel]="'never'">
           <input matInput placeholder="{{'INDEXPAGE_FILTER' | translate}}" [(ngModel)]="filter" type="text">
         </mat-input-container>
       </div>
