--- a/src/assets/scss/_forms.scss
+++ b/src/assets/scss/_forms.scss
@@ -279,16 +279,16 @@ dropdown-component {
   }
 }
 
-.slider-blue.md-checked:not(.md-disabled) .md-slide-toggle-bar {
+.slider-blue.md-checked:not(.md-disabled) .mat-slide-toggle-bar {
   background: $main-blue;
 }
 .slider-blue.md-checked:not(.md-disabled) {
-  .md-slide-toggle-thumb {
+  .mat-slide-toggle-thumb {
     background-color: $main-blue !important;
   }
 }
 .slider-blue {
-  .md-slide-toggle-thumb {
+  .mat-slide-toggle-thumb {
     background-color: #E4E4E4;
   }
 }
