--- a/src/assets/scss/_registration.scss
+++ b/src/assets/scss/_registration.scss
@@ -81,22 +81,8 @@
         color: #ffffff !important;
       }
 
-      .md-input-underline {
-        border-color: white;
+      .mat-input-underline {
 
-        span {
-          background-color: white;
-        }
-      }
-    }
-
-    .form-error {
-      .md-input-underline {
-        border-color: #F05D5D;
-
-        span {
-          background-color: #F05D5D;
-        }
       }
     }
   }
