--- a/src/app/pages/profile-page/notification-devices/device-toggle-item/device-toggle-item.component.html
+++ b/src/app/pages/profile-page/notification-devices/device-toggle-item/device-toggle-item.component.html
@@ -24,5 +24,5 @@
     </ng-template>
   </div>
 
-  <md-slide-toggle class="slider-blue" [(ngModel)]="notificationSettings.receive" (change)="toggled.emit(true)"></md-slide-toggle>
+  <mat-slide-toggle class="slider-blue" [(ngModel)]="notificationSettings.receive" (change)="toggled.emit(true)"></mat-slide-toggle>
 </div>
