--- a/src/app/pages/profile-page/notification-preferences/notification-preferences.component.html
+++ b/src/app/pages/profile-page/notification-preferences/notification-preferences.component.html
@@ -25,7 +25,7 @@
             </tr>
             <tr class="subtitle-tr" *ngFor="let item of group.notifications">
               <td class="title title--secondary"><div>{{group.key + '%' + item.key | translate: 'notification-name'}}</div></td>
-              <td><md-slide-toggle class="slider-blue" [(ngModel)]="item.active"></md-slide-toggle></td>
+              <td><mat-slide-toggle class="slider-blue" [(ngModel)]="item.active"></mat-slide-toggle></td>
               <td><mat-checkbox class="checkbox-blue" [checked]="item.channels.indexOf('six') !== -1" (change)="itemToggled($event, item, 'six')"></mat-checkbox></td>
               <td><mat-checkbox class="checkbox-blue" [checked]="item.channels.indexOf('email') !== -1" (change)="itemToggled($event, item, 'email')"></mat-checkbox></td>
               <td><mat-checkbox class="checkbox-blue" [checked]="item.channels.indexOf('sms') !== -1" (change)="itemToggled($event, item, 'sms')"></mat-checkbox></td>
