--- a/src/app/pages/search-page/perfect-match/perfect-creditcard-provider/perfect-credit-card.component.html
+++ b/src/app/pages/search-page/perfect-match/perfect-creditcard-provider/perfect-credit-card.component.html
@@ -18,12 +18,12 @@
 
         <div class="perfect-entity__info__fields__item">
           <span class="perfect-entity__info__fields__item__label">{{'SEARCH_PERFECT_CREDITCARD_NUMBER' | translate}}:</span>
-          <span class="perfect-entity__info__fields__item__value">{{creditCard.ccnumber | creditCardFormat: true}}</span>
+          <span class="perfect-entity__info__fields__item__value">{{creditCard.maskedNumber }}</span>
         </div>
 
         <div class="perfect-entity__info__fields__item">
           <span class="perfect-entity__info__fields__item__label">{{'SEARCH_PERFECT_CREDITCARD_CCV' | translate}}:</span>
-          <span class="perfect-entity__info__fields__item__value">{{creditCard.ccv}}</span>
+          <span class="perfect-entity__info__fields__item__value">****</span>
         </div>
       </div>
     </div>
