--- a/src/assets/scss/_entity-view.scss
+++ b/src/assets/scss/_entity-view.scss
@@ -42,11 +42,11 @@ $main-blue: #5383C3;
       margin-bottom: 10px;
 
       mat-input-container {
-        .md-input-wrapper {
+        .mat-input-wrapper {
           margin: 0;
         }
 
-        .md-input-underline {
+        .mat-input-underline {
           margin: 0;
         }
       }
@@ -205,7 +205,7 @@ $main-blue: #5383C3;
       display: inline-block;
       vertical-align: middle;
 
-      md-input {
+      mat-input-container {
         margin: 0;
       }
 
@@ -227,7 +227,7 @@ $main-blue: #5383C3;
           width: 150px;
         }
 
-        .md-input-wrapper {
+        .mat-input-wrapper {
           margin: 0;
         }
       }
@@ -240,7 +240,7 @@ $main-blue: #5383C3;
           margin-right: 3px;
         }
 
-        .md-input-wrapper {
+        .mat-input-wrapper {
           margin: 0;
         }
 
@@ -453,7 +453,7 @@ $main-blue: #5383C3;
           width: 90px;
         }
 
-        md-input {
+        mat-input-container {
           margin: 0;
           width: 110px;
 
@@ -567,7 +567,7 @@ $main-blue: #5383C3;
         margin-left: auto;
         font-size: 14px;
 
-        .md-input-wrapper {
+        .mat-input-wrapper {
           margin: 0;
         }
       }
@@ -875,7 +875,7 @@ $main-blue: #5383C3;
     }
 
     .mat-tab-list {
-      md-ink-bar {
+      mat-ink-bar {
         margin-left: 0 !important;
         width: 50% !important;
       }
@@ -977,7 +977,7 @@ $main-blue: #5383C3;
         }
       }
 
-      md-input {
+      mat-input-container {
         margin: 0 18px;
         width: 300px;
         font-size: 14px;
@@ -1016,7 +1016,7 @@ $main-blue: #5383C3;
           }
         }
 
-        md-input {
+        mat-input-container {
           display: inline-block;
           width: 200px;
         }
@@ -1026,7 +1026,7 @@ $main-blue: #5383C3;
         }
       }
 
-      md-input {
+      mat-input-container {
         margin: 5px 18px;
         width: 300px;
         font-size: 16px;
@@ -1047,7 +1047,7 @@ $main-blue: #5383C3;
     height: 100px;
   }
 
-  .md-input-wrapper {
+  .mat-input-wrapper {
     position: relative;
     margin: 0;
   }
