--- a/src/assets/scss/_menu.scss
+++ b/src/assets/scss/_menu.scss
@@ -1,10 +1,10 @@
-.md-menu-content {
+.mat-menu-content {
   max-height: 250px;
   overflow: auto;
 }
 
 .topnav__items--collapsed__menu {
-  .md-menu-content {
+  .mat-menu-content {
     max-height: 400px;
     overflow: auto;
 
@@ -14,7 +14,7 @@
   }
 }
 
-.md-menu-content {
+.mat-menu-content {
   button {
     font-weight: normal !important;
   }
