--- a/src/assets/scss/_tab.scss
+++ b/src/assets/scss/_tab.scss
@@ -14,7 +14,7 @@
 }
 
 .mat-tab-list {
-  md-ink-bar {
+  mat-ink-bar {
     margin-left: 7px !important;
     width: 86px !important;
     background-color: #20A2D1 !important;
