--- a/src/assets/scss/_customer-view.scss
+++ b/src/assets/scss/_customer-view.scss
@@ -28,7 +28,7 @@ $default-padding: 14px 12px 6px;
 
   &__card {
     margin: 5px;
-    padding: 0;
+    padding: 0 !important;
     box-sizing: border-box;
 
     mat-card-title {
@@ -112,10 +112,10 @@ $default-padding: 14px 12px 6px;
         white-space: nowrap;
       }
 
-      md-input {
+      mat-input-container {
         margin: 0;
 
-        .md-input-wrapper {
+        .mat-input-wrapper {
           margin: 0;
         }
       }
@@ -270,13 +270,13 @@ $default-padding: 14px 12px 6px;
       }
     }
 
-    md-input {
+    mat-input-container {
       margin: 0;
       max-width: 240px;
     }
 
     .input-disabled {
-      .md-input-underline {
+      .mat-input-underline {
         border-top: 1px solid rgba(0, 0, 0, 0.4);
         background-image: none;
       }
@@ -287,7 +287,7 @@ $default-padding: 14px 12px 6px;
     }
 
     .no-margin {
-      .md-input-wrapper {
+      .mat-input-wrapper {
         margin: 0;
       }
     }
@@ -472,7 +472,7 @@ customer-notes {
       background: white;
       box-shadow: 0 0 5px rgba(0,0,0,0.4);
 
-      textarea {
+      mat-input-container {
         width: 100%;
 
         textarea {
