--- a/src/assets/scss/_navigation.scss
+++ b/src/assets/scss/_navigation.scss
@@ -185,7 +185,7 @@ app-topnav {
     height: auto !important;
   }
 
-  .md-menu-click-catcher {
+  .mat-menu-click-catcher {
     z-index: 9999;
   }
 
@@ -232,5 +232,12 @@ app-topnav {
 
   .mat-input-underline {
     display: none;
+  }
+}
+
+.topnav__search__container {
+  .auto-complete__option {
+    line-height: 14px;
+    font-weight: 400;
   }
 }
