--- a/src/assets/scss/_profile.scss
+++ b/src/assets/scss/_profile.scss
@@ -41,7 +41,7 @@
         padding: 35px 15px 50px;
         font-size:14px;
 
-        md-input, mat-input-container, .profile-page__content__general__data__dropdown {
+        mat-input-container, .profile-page__content__general__data__dropdown {
           display: inline-block;
           margin: 0 45px 10px 0;
           width: calc(50% - 50px);
