--- a/src/assets/scss/_reports-table.scss
+++ b/src/assets/scss/_reports-table.scss
@@ -14,7 +14,7 @@
     font-size: 20px;
     color: rgba(0,0,0,0.87);;
 
-    md-input {
+    mat-input-container {
       margin-left: auto;
       margin-right: 20px;
       font-size: 12px;
