--- a/src/assets/scss/_tracker-view.scss
+++ b/src/assets/scss/_tracker-view.scss
@@ -19,10 +19,10 @@
       &__name {
         margin-top: 10px;
 
-        md-input {
+        mat-input-container {
           margin: 0;
 
-          .md-input-wrapper {
+          .mat-input-wrapper {
             margin-top: 0;
             margin-bottom: 20px;
           }
@@ -83,7 +83,7 @@
             height: 80px;
           }
 
-          .md-input-wrapper {
+          .mat-input-wrapper {
             position: relative;
             margin: 0;
           }
