Fix design issues on filter input of memory table component

--- a/src/app/pages/access-keys-page/access-keys-index/access-keys.component.html
+++ b/src/app/pages/access-keys-page/access-keys-index/access-keys.component.html
@@ -3,8 +3,8 @@
     <div class="customer-transactions__title-container">
       <div class="title">{{ 'ACCOUNT_KEYS_TITLE' | translate}}</div>
     </div>
-    <mat-input-container>
-      <input matInput class="entity-view__table-component__header__filter" placeholder="{{ 'INDEXPAGE_FILTER' | translate}}" [(ngModel)]="filterValue">
+    <mat-input-container class="entity-view__table-component__header__filter">
+      <input matInput placeholder="{{ 'INDEXPAGE_FILTER' | translate}}" [(ngModel)]="filterValue">
     </mat-input-container>
     <table-pagination
       [limit]="limit"
